# grouped-ordering

./: Cargo.toml
proc_macros/: Cargo.toml
proc_macros/src/: grouped_ordering.rs  grouped_ordering_instance.rs  lib.rs
src/: lib.rs
